[project]
name = "lab-vetnolimits"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "wperchuc", email = "w.perchuc@gmail.com" }
]
dependencies = [
    "streamlit>=1.41.1",
    "python-dotenv>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lab_vetnolimits"]
